--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
     <color name="light_gray">#190d1c71</color>
     <color name="gray_button">#acafbf</color>
     <color name="rust">#a83f0b</color>
+    <color name="biru_cyan">#00CFFD</color>
 
     <color name="azure">#179eff</color>
     <color name="sapphire">#162ca2</color>
