--- a/app/src/main/res/layout/activity_attendance_detail.xml
+++ b/app/src/main/res/layout/activity_attendance_detail.xml
@@ -8,12 +8,43 @@
     tools:context=".ui.home.views.AttendanceDetailActivity">
 
     <ImageView
+        android:id="@+id/iv_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_back"/>
+        android:layout_marginTop="@dimen/margin_medium_small_size_10"
+        android:layout_marginLeft="@dimen/margin_small_7"
+        android:src="@drawable/ic_left_arrow"/>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/margin_xsmall_size_1"
-        android:background="@color/black"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/height_large_113">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_xsmall_1"
+            android:layout_centerVertical="true"
+            android:background="@color/black"/>
+
+        <TextView
+            android:id="@+id/tv_percent"
+            android:layout_width="@dimen/margin_xxxlarge_size153"
+            android:layout_height="@dimen/margin_xxxlarge_size153"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/bg_round"
+            android:fontFamily="@font/quicksand_bold"
+            android:gravity="center"
+            android:text="100%"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_xxxlarge_size_40" />
+
+    </RelativeLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_xmedium_size_27"
+        tools:listitem="@layout/item_attendance_detail"
+        android:paddingLeft="@dimen/margin_medium_size_18"
+        android:paddingRight="@dimen/margin_medium_size_18"/>
 </LinearLayout>
